侧边栏收缩时二级菜单背景样式bug修复

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,7 +16,8 @@ $menuText: #ffffff;
 $menuActiveText: #409eff;
 $subMenuActiveText: #f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
-$menuBg: transparent;
+// $menuBg: transparent;
+$menuBg: #23262e;
 // $menuHover: #ffffff;
 $menuHover: #1c1e25;
 
